# sandbox

./: .gitignore  README.md
components/databases/md/schemes/md/: pyproject.toml
components/databases/md/schemes/md/src/db/md/md/: settings.py
components/databases/md/schemes/md/src/db/md/md/dd/: logging.py  metadata.py  tables.py
components/databases/md/schemes/md/src/db/md/md/dd/refs/: sites.py  users.py
components/databases/md/schemes/md/src/db/md/md/dd/refs/db/: db_databases.py  db_server_types.py  db_vendors.py
components/databases/md/schemes/md/src/db/md/md/entrypoints/: alembic.py  create_all.py
components/databases/md/schemes/md/src/db/md/md/fixtures/: tools.py
components/databases/md/schemes/md/src/db/md/md/fixtures/init/: initial.sql  initial_py.py  load.py
components/databases/md/schemes/md/src/db/md/md/migrations/: env.py
components/databases/md/schemes/md/src/db/md/md/migrations/dd/2025/05/10/: 1410-5e6e65335090_init.py
components/databases/md/schemes/md/src/db/md/md/migrations/dm/2025/05/10/: 1410-ceae5d9ee24c_init.py
components/databases/md/schemes/md/src/db/md/md/schema/: metadata.py
components/databases/md/schemes/md/src/db/md/md/schema/refs/: sites.py  users.py
components/databases/md/schemes/md/src/db/md/md/schema/refs/db/: __init__.py  db_databases.py  db_server_types.py  db_vendors.py
components/databases/md/schemes/md/src/db/md/md/test/: testcases.py
components/databases/md/schemes/md/tests/Integration/: conftest.py  test_logging.py  test_settings.py
components/databases/md/schemes/md/tests/Integration/entrypoints/: test_alembic.py  test_create_all.py
components/databases/md/schemes/md/tests/Integration/fixtures/: test_init.py  test_tools.py
components/databases/md/schemes/md/tests/unit/dd/: test_refs.py
components/databases/md/schemes/md/tests/unit/schema/: test_refs.py
(+92 files in other folders)
